src/objects/Journal__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>得意先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>伝票</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountSum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>金額（税抜）２</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>金額（税抜）</label>
        <summarizedField>JournalLine__c.Amount__c</summarizedField>
        <summaryForeignKey>JournalLine__c.Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CostSum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>原価合計</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JournalDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>伝票日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LineNameSum__c</fullName>
        <inlineHelpText>子オブジェクト側で数値属性でない項目名の末尾に Sum をつけた項目名を、親オブジェクト側に定義した場合のテスト</inlineHelpText>
        <label>テスト１</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <label>伝票</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>J-{YY}{MM}{0000}</displayFormat>
        <label>伝票No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>